--- a/escom-bpm-web/src/main/webapp/view/common/dict-details.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-details.xhtml
@@ -31,7 +31,9 @@
             <p:column headerText="#{bundle.Actions}" style="text-align: center;" > 
                 <p:commandButton icon="ico_look" title="#{bundle.Open}" 
                                  update="mainFRM:mainTabView:panelDetail"
-                                 actionListener="#{_bean.onOpenDetail(item)}">              
+                                 actionListener="#{_bean.onOpenDetail(item)}">
+                    <p:ajax event="dialogReturn" listener="#{_bean.afterCloseDetailItem}" 
+                            update="mainFRM:mainTabView:panelDetail"/>
                 </p:commandButton>
                 <p:commandButton icon="ui-icon-trash" title="#{bundle.Delete}" 
                                  update="mainFRM:mainTabView:panelDetail"
